<resources>
    <string name="app_name">RolCharacterBook</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="todo">TODO</string>
    <string name="title_activity_list">Characters</string>
    <string name="title_activity_Form">New Character</string>
    <string name="title_activity_about">About ..</string>
    <string name="title_activity_search">Search</string>
    <string name="menu_about">About ...</string>
    <string name="menu_order">Order</string>
    <string name="menu_config">Settings</string>
    <string name="menu_help">Help</string>
    <string name="error_1">Obligatory field</string>
    <string name="error_2">Incorrect Value</string>
    <string name="error_3">Must be a numeric value</string>
    <string name="strength">Strength</string>
    <string name="dexterity">Dexterity</string>
    <string name="constitution">Constitution</string>
    <string name="intilligence">Intelligence</string>
    <string name="wisdom">Wisdom</string>
    <string name="charisma">Charisma</string>
    <string name="name">Name</string>
    <string name="player">Player</string>
    <string name="clean_img">Clean Image</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="email" translatable="false">Email</string>
    <string name="dateToPlay">Game date [yyyy-mm-dd]</string>
    <string name="barbarian">Barbarian</string>
    <string name="wizard">Wizard</string>
    <string name="cleric">Cleric</string>
    <string name="warrior">Warrior</string>
    <string name="rogue">Rogue</string>
    <string name="formEraseText">Are you sure to remove? This action is permanent</string>
    <string name="formEraseTitle">Remove</string>
    <string name="yes">Yes</string>
    <string name="no" translatable="false">No</string>
    <string name="addclass">Type the class:</string>
    <string name="acept">Acept</string>
    <string name="cancel">Cancel</string>
    <string name="empty_text">Don\'t add an empty text</string>
    <string name="add">added</string>
    <string name="maybeplayer">NPC controlled by invitation</string>
    <string name="emailcontact" translatable="false">aangserrano@iesfranciscodelosrios.es</string>
    <string name="search">Search</string>
    <string name="creatorName">By Ángel Serrano García</string>
    <string name="before">Before</string>
    <string name="after">After</string>
    <string name="exactDate">Exact Date</string>
    <string name="deleted">Item deleted:</string>
    <string name="chooseImg">Choose a portrait</string>
    <string name="needWrite">Need Write Permission</string>
    <string name="noDeleted">Item no deleted</string>
    <string name="error_save">Fields contains errors</string>
    <string name="error" translatable="false">Error</string>
    <string name="number_elements">Elements:</string>
    <string name="inv_class">Invalid selection Class</string>
    <string name="date">Date</string>
    <string name="char_class">Class</string>
    <string name="title_activity_help">Help</string>
    <!-- Strings used for fragments for navigation -->

</resources>