<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/about"
        android:orderInCategory="100"
        android:title="@string/menu_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/order"
        android:title="@string/menu_order"
        app:showAsAction="never" />
    <item
        android:id="@+id/settings"
        android:title="@string/menu_config"
        app:showAsAction="never" />
    <item
        android:id="@+id/help"
        android:title="@string/menu_help"
        app:showAsAction="never" />
</menu>